# mcstas-python-wrapper

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pypi-publish.yml
mcpw/: jupiter_functions.py  jupyter_functions.py  manager.py  mcstas_wrapper.py  pyrightconfig.json  setup.py  setup_tools.py
mpw/: manager.py  mcstas_rapper.py  setup.py  setup_tools.py
