[metadata]
name = mcpw
version = 0.1.0
author = Tincotema
author_email = tincotema@genthree.io
description = A lightweight mcstas python wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tincotema/mcstas-python-wrapper
project_urls =
    Bug Tracker = https://github.com/tincotema/mcstas-python-wrapper/issues
license = MIT
python_requires = >=3.6
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
keywords =
    mcstas
    wrapper

[options]

[files]
packages =
    mcpw

[options.entry_points]
console_scripts =
    mcpw_setup = mcpw.setup:main
    mcpw_manager = mcpw.manager:main

[bdist_wheel]
universal = 0
